Prevent series direction chart text being too close to panel border

--- a/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
+++ b/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
@@ -25,6 +25,7 @@ h3 {
     flex-grow: 1;
     display: block;
     position: relative;
+    margin-bottom: 5px;
 }
 
 .title {
